- Added the lily of the valley as a new type of flower, which can be ground down into 2 white dye.
- Changed grass to not die while in darkness in order to facilitate its decorative use and to prevent ugly dirt under overhangs or dense trees. However, to maintain balance, animals may not eat from grass without sunlight, and the texture updates slightly to reflect this.
- Changed terracotta to break into 8 red sand piles when broken with an iron pick or lower. This and the below change were done for balance with my world gen addon.
- Changed stone variants to drop their loose cobblestone variant when broken with an iron pick or lower.
- Changed (increased) the hardness and blast resistance of terracotta.
- Changed doors to stack to 16.
- Changed trapdoors above ladders to only be climbable if the trapdoor is attached to the same face as the ladder.
- Changed chair collision and selection box to better match the model. I intend to make further changes here, such as to make the back collidable, but that would require some rewrites.
- Changed coarse dirt to be able to grow reeds, flowers, and other plants.
- Changed rendering on tables to have a wider leg if the block type uses walls instead of fences to match the thickness of the walls.
- Changed the texture on polished stone, polished stone variant, polished infused stone, cut sandstone, and cut red sandstone columns to better reflect their model.
- Changed the name of several items and blocks slightly to be more consistent.
- Changed the collision box of pergolas to make them a full half block tall to allow stepping onto full blocks from them.
- Changed (decreased) the amount of tall grass which spawns from fertilizer.
- Changed (increased) the amount of flowers which spawn from fertilizer.
- Changed the fertilizer recipe to be made in a cauldron, and to use potash instead of dung.
- Changed the textures of blood wood doors and trapdoors as they were previously based on vanilla's acacia textures.